--- a/src/app/components/pages/branch/show/show.component.html
+++ b/src/app/components/pages/branch/show/show.component.html
@@ -127,3 +127,10 @@
         </div>
     </div>
 </div>
+
+<app-create #createModal (branchCreated)="onBranchCreated($event)"></app-create>
+
+<!-- <app-edit
+    #editModal
+    (branchUpdated)="onBranchUpdated($event)"
+></app-edit> -->
