--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -13,8 +13,8 @@
                     pButton
                     pRipple
                     icon="pi pi-plus"
-                    label="Chuyển hàng"
-                    (click)="openCreateModal()"
+                    label="Nhập kho"
+                    [routerLink]="['/warehouse/stock-in/create']"
                 ></button>
             </ng-template>
         </p-toolbar>
