--- a/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -907,8 +907,8 @@
   .p-chips .p-chips-multiple-container .p-chips-token {
     padding: 0.375rem 0.75rem;
     margin-right: 0.5rem;
-    background: #e5e7eb;
-    color: #4b5563;
+    background:var(--primary-color);
+    color: #fff;
     border-radius: 16px;
   }
   .p-chips .p-chips-multiple-container .p-chips-token.p-focus {
@@ -2958,7 +2958,7 @@
     padding: .65rem .65rem;
     border: 1px solid #e5e7eb;
     border-width: 0 0 1px 0;
-    font-weight: 700;
+    font-weight: 600;
     color: #374151;
     background: #f9fafb;
     transition: box-shadow 0.2s;
@@ -4466,6 +4466,7 @@
   .p-dialog .p-dialog-content {
     background: #ffffff;
     color: #4b5563;
+    overflow-y: unset;
     padding: 0.5rem 1rem 0.5rem 1rem;
   }
   .p-dialog .p-dialog-content:last-of-type {
@@ -6524,4 +6525,27 @@
     display:grid;
     grid-template-columns: repeat(7,1fr);
     gap: 8px;
+}
+
+.p-chips-input-token{
+    width: 250px;
+}
+
+.input-number-custom input {
+    padding: 0;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    border-radius: 0;
+    padding-bottom: 4px;
+}
+
+.input-number-custom input:focus {
+    border: none;
+    border-bottom: 2px solid var(--primary-color);
+    border-radius: 0;
+}
+
+.input-number-payment input {
+    font-size: 28px;
+    font-weight: 500;
 }
